syntax = "proto3";

package qitmeer.p2p.v1;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message BlockData {
  bytes blockBytes = 2 [(gogoproto.moretags) = "ssz-max:\"1048576\""];
}